feat: introduce rpc client logic and examples
