# src/models/solana-rpc-request-one-of7-params.ts
@@ -1,0 +1,36 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenZeppelin Relayer API
+ * OpenZeppelin Relayer API
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @interface SolanaRpcRequestOneOf7Params
+ */
+export interface SolanaRpcRequestOneOf7Params {
+    /**
+     * 
+     * @type {string}
+     * @memberof SolanaRpcRequestOneOf7Params
+     */
+    'method': string;
+    /**
+     * 
+     * @type {any}
+     * @memberof SolanaRpcRequestOneOf7Params
+     */
+    'params': any;
+}
+
