# src/models/solana-rpc-request-one-of7.ts
@@ -1,0 +1,48 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenZeppelin Relayer API
+ * OpenZeppelin Relayer API
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { SolanaRpcRequestOneOf7Params } from './solana-rpc-request-one-of7-params';
+
+/**
+ * 
+ * @export
+ * @interface SolanaRpcRequestOneOf7
+ */
+export interface SolanaRpcRequestOneOf7 {
+    /**
+     * 
+     * @type {string}
+     * @memberof SolanaRpcRequestOneOf7
+     */
+    'method': SolanaRpcRequestOneOf7MethodEnum;
+    /**
+     * 
+     * @type {SolanaRpcRequestOneOf7Params}
+     * @memberof SolanaRpcRequestOneOf7
+     */
+    'params': SolanaRpcRequestOneOf7Params;
+}
+
+/**
+    * @export
+    * @enum {string}
+    */
+export enum SolanaRpcRequestOneOf7MethodEnum {
+    RAW_RPC_REQUEST = 'rawRpcRequest'
+}
+
+
