# src/models/stellar-rpc-request-one-of-params.ts
@@ -1,0 +1,36 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenZeppelin Relayer API
+ * OpenZeppelin Relayer API
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * Raw request where params can be any JSON value (string or structured).
+ * @export
+ * @interface StellarRpcRequestOneOfParams
+ */
+export interface StellarRpcRequestOneOfParams {
+    /**
+     * 
+     * @type {string}
+     * @memberof StellarRpcRequestOneOfParams
+     */
+    'method': string;
+    /**
+     * 
+     * @type {any}
+     * @memberof StellarRpcRequestOneOfParams
+     */
+    'params': any;
+}
+
